# Scarlet

./: README.md
emberdll/: Cargo.toml
emberdll/src/: lib.rs
scarlet/: Cargo.toml
scarlet/src/: main.rs
